--- a/app/src/main/res/layout/activity_select_room.xml
+++ b/app/src/main/res/layout/activity_select_room.xml
@@ -35,7 +35,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="248dp"
+        android:layout_marginBottom="300dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -54,6 +54,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="32dp"
         android:text="@string/enterRoom"
+        android:onClick="enterRoomClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
