--- a/app/src/main/res/layout/activity_room_view.xml
+++ b/app/src/main/res/layout/activity_room_view.xml
@@ -9,5 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/roomsView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 </android.support.constraint.ConstraintLayout>
